# seefood-app

./: .cursorrules  .gitignore  README.md  pyproject.toml  run_ui.py
app/: __init__.py  main.py
app/models/: __init__.py  hotdog_classifier.py
app/utils/: __init__.py  image_utils.py
